--- a/css/style.css
+++ b/css/style.css
@@ -77,12 +77,11 @@ footer {
   color: white;
   text-align: center;
   padding: 5px;
-  justify-content: center;
   position: absolute;
   width: 100%;
-  display: block;
   bottom: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
 }
 
 @media (max-width: 420px) {
